# JUCE-Audio-Service

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  README_docs_bridge.md  test_lazy_load.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml
docs/: deps.md
fixtures/: test_edl.json
include/JuceAudioService/: AudioFileSource.h  AudioService.h  OfflineRenderer.h  VoiceGenerator.h
proto/: audio_engine.proto
scripts/: build.sh  get_deps.sh  one_click.command  one_click.sh  one_click_docs.command  one_click_docs.sh  smoke_test.sh  test.sh  vcpkg_env.sh
scripts/shortcuts/: Launch Audio Docs Bridge.shortcut.b64  install_shortcut.command
src/: AudioFileSource.cpp  AudioService.cpp  OfflineRenderer.cpp  VoiceGenerator.cpp  grpc_client_cli.cpp  grpc_server.cpp
src/edl/: EdlCompiler.cpp  EdlCompiler.h  EdlRenderer.cpp  EdlRenderer.h  EdlStore.cpp  EdlStore.h
src/util/: EdlJson.cpp  EdlJson.h
tests/: AudioServiceTests.cpp  CMakeLists.txt  GoldenFileTest.cpp  GrpcEdlIntegrationTest.cpp  GrpcSmokeTests.cpp
tests/data/golden/: sine_1k_2s_48k.sha256  voice_0_250ms.checksum
tools/: CMakeLists.txt  make_fixture_cli.cpp  render_cli.cpp
tools/docs_bridge/: bridge.py  gdocs.py  push_transcript.py  requirements.txt  transcribe.py
